[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/secbot.png" type="Texture" id=1]
[ext_resource path="res://entities/enemies/Robot.gd" type="Script" id=2]
[ext_resource path="res://assets/Kenney Pixel Square.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/daze_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/fasbot.png" type="Texture" id=5]
[ext_resource path="res://assets/guabot.png" type="Texture" id=6]
[ext_resource path="res://assets/sfx/hit.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sfx/enemy_death.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sfx/no_energy.wav" type="AudioStream" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25, 45 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Robot" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 2, 19 )
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Health" type="Label" parent="."]
margin_left = -6.24333
margin_top = -66.2983
margin_right = 5.75667
margin_bottom = -36.2983
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.827451, 0.117647, 0.117647, 1 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Dazed" type="Sprite" parent="."]
position = Vector2( 26.1626, -31.514 )
texture = ExtResource( 4 )

[node name="DazeCount" type="Label" parent="Dazed"]
margin_left = 13.0813
margin_top = -16.9462
margin_right = 25.0813
margin_bottom = 13.0538
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.984314, 0.572549, 0.168627, 1 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="DeathSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="DazeSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -4.0
pitch_scale = 0.7

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
